fixtures/frontend/milestone-2/invalid/operator-expression-typing/main.aivi
val brokenAnd: Bool     = 1 and True
val brokenCompare: Bool = [1] < [2]
val brokenNot: Bool     = not None
val brokenAdd: Int      = 1 + True
val brokenEq: Bool      = 1 != "1"
